Added Crobat version

--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pokeclicker",
   "version": "0.9.14",
+  "crobatVersion": "0.3.0",
   "description": "PokéClicker repository",
   "main": "index.js",
   "scripts": {
