--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "eslint": "^7.4.0",
     "intro.js": "^2.9.3",
     "jquery": "^3.5.1",
+    "jquery-ui": "^1.13.2",
     "knockout": "^3.5.1",
     "popper.js": "^1.16.0",
     "sortablejs": "^1.10.2"
