--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pokeclicker",
-  "version": "0.9.16",
+  "version": "0.9.17",
   "crobatVersion": "0.3.3",
   "description": "PokéClicker repository",
   "main": "index.js",
@@ -84,6 +84,7 @@
     "eslint": "^7.4.0",
     "intro.js": "^2.9.3",
     "jquery": "^3.5.1",
+    "jquery-ui": "^1.13.2",
     "knockout": "^3.5.1",
     "popper.js": "^1.16.0",
     "sortablejs": "^1.10.2"
